# TSP_Optimization

./: .gitignore  CMakeLists.txt  HW_1 NN.txt  Resourcepr104-2024-03-25.tsp  Resourcepr50-2024-03-25.tsp  next HM.txt
.github/: README.md  parameters.md  temp_README.md
Archive/Csv/: 24-07-21_14-50.csv  24-07-21_17-01.csv  24-07-21_20-27.csv  24-07-21_22-54.csv  24-07-22_09-58.csv  24-07-22_13-28.csv  Benders' Loop_24-04-21.csv  Glued Benders' Loop_24-04-21.csv  Nearest Neighbor_24-04-21.csv  _mip-post.csv
Archive/tmp/: CPLEX_24-04-20.csv  Random_24-04-20.csv
Documents/: TODO.md  thesis.txt
Documents/HW 1/: Nearest Neighbor.txt  Solution Explenation.md
Documents/HW 10/: Matheuristics - local branching.txt  Matheuristics 2.txt
Documents/HW 2/: doc2.txt
Documents/HW 3/: Variable Neighborhood Search.txt
Documents/HW 4/: cplex implementation.txt
Documents/HW 5/: Benders' loop.txt  tmp.txt
Documents/HW 6/: gluing.txt
Documents/HW 7/: CPLEX callbacks.txt
Documents/HW 8/: callback for fractionals sols.txt
Documents/HW 9/: Matheuristics - hard fixing.txt  Matheuristics 1.txt  Matheuristics.txt
Documents/new algs/: notes.txt
Latex/: bibliografia.bib  main.tex
Latex/Capitoli/: Conclusions.tex  ExactModels.tex  Heuristics.tex  Introduction.tex  Matheuristics.tex  Metaheuristics.tex  frontespizio.tex
Resource/: 1.tsp  pr10-2024-03-25.tsp  pr10-93846529-2024-07-24.tsp  pr10.tsp  pr100-2024-03-21.tsp  pr100-2024-03-24.tsp  pr100-2024-03-25.tsp  pr100-2024-04-16.tsp  pr100-2024-05-07.tsp  pr100-2024-05-25.tsp  pr100-93846529-2024-07-24.tsp  pr100-93846552-2024-07-24.tsp  pr1000-2024-03-24.tsp  pr1000-2024-03-25.tsp  pr10000-2024-03-25.tsp  pr104-2024-03-25.tsp  pr10v1.tsp  pr10v2.tsp  pr120-2024-04-01.tsp  pr200-2024-05-07.tsp  pr300-93846529-2024-07-24.tsp  pr50-2024-03-25.tsp  pr50-2024-04-19.tsp  pr50-2024-04-20.tsp  pr50-2024-04-21.tsp  pr50-2024-04-22.tsp  pr50-2024-04-24.tsp  pr50-2024-05-06.tsp  pr50-2024-05-07.tsp  pr500-2024-03-24.tsp
Resource/Launcher/: launcher example.txt  launcher.txt  launcher2.txt
Template/: main.c  parser.c  parser.h  vrp.c  vrp.h
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
include/: algoSelector.h  launcher.h  menu.h  parser.h  tsp.h
include/Algorithm/: NN.h  cplexAlg.h  optimizations.h
include/Algorithm/Exacts/: cplexAlg.h
include/Algorithm/Heuristics/: NN.h
include/Algorithm/Matheuristics/: hardFixing.h  localBranching.h  softFixing.h
include/Algorithm/Optimizators/: optUtils.h  tabuSearch.h  twoOpt.h  vns.h
src/: NN.c  NN.h  algoSelector.c  data.txt  launcher.c  main  main.c  menu.c  parser.c  parser.h  plot_script.plt  pr10.tsp  tsp.c  vrp.c  vrp.h
src/Algorithm/: NN.c  cplexAlg.c  optimizations.c  tabu.c
src/Algorithm/Exacts/: cplexAlg.c
src/Algorithm/Heuristics/: NN.c
src/Algorithm/Matheuristics/: hardFixing.c  localBranching.c  softFixing.c
src/Algorithm/Optimizators/: optUtils.c  tabuSearch.c  twoOpt.c  vns.c
src/Comparator/: perfprof.py
